manifests/infrastructure/authentik/outpost.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ext-auth-outpost
  namespace: authentik
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: networking
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: networking
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
